Fixed the burgermenu on mobile phone, the issue was that we didn't load it in thymeleaf and we also had to add a eventlistener "DOMContentLoaded" to the javascript

--- a/src/main/resources/public/css/admin.css
+++ b/src/main/resources/public/css/admin.css
@@ -10,9 +10,9 @@
     background-color: #ffffff;
     width: 95%;
     max-width: 1800px;
-    min-height: 60vh;
+    min-height: 50vh;
     border-radius: 2rem;
-    padding: 40px;
+    padding: 20px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
